Fixed layout bugs

--- a/css/button.css
+++ b/css/button.css
@@ -44,9 +44,10 @@
 	font-size: 15px;
 }
 
+/*original height was 60px*/
 .button-img{
 	width: auto;
-	height: 60px;
+	height: 65px;
 	padding: 5px 5px 5px 5px;
 }
 
@@ -95,50 +96,47 @@
 	background-image: url(../img/forward-hover.svg);
 }
 
-@media only screen and (max-width: 20px) {
-	.button, .start-stop-button, .button-clearAll, .button-Instruction{
-		display: block;
-		color:#FFF;
-		text-align: center;
-		box-shadow: 2px 2px 3px #999;
-		vertical-align: top;
-	}
+/*@media only screen and (max-width: 20px) {*/
+/*	.button, .start-stop-button, .button-clearAll, .button-Instruction{*/
+/*		display: block;*/
+/*		color:#FFF;*/
+/*		text-align: center;*/
+/*		box-shadow: 2px 2px 3px #999;*/
+/*		vertical-align: top;*/
+/*	}*/
 
-	.button{
-		width: var(--small-dimension);
-		height: var(--small-dimension);
-		line-height:  var(--small-dimension);
-		border-radius:50%;
-		font-size: 13px;
-	}
+/*	.button{*/
+/*		width: var(--small-dimension);*/
+/*		height: var(--small-dimension);*/
+/*		line-height:  var(--small-dimension);*/
+/*		border-radius:50%;*/
+/*		font-size: 13px;*/
+/*	}*/
 
-	.start-stop-button, .button-clearAll{
-		width:  var(--small-dimension);
-		height:  var(--small-dimension);
-		line-height:  var(--small-dimension);
-		border-radius:50%;
-		font-size: 13px;
-	}
+/*	.start-stop-button, .button-clearAll{*/
+/*		width:  var(--small-dimension);*/
+/*		height:  var(--small-dimension);*/
+/*		line-height:  var(--small-dimension);*/
+/*		border-radius:50%;*/
+/*		font-size: 13px;*/
+/*	}*/
 
-	.button-img {
-		width: auto;
-		height:  var(--small-dimension);
-		padding: 1vw 1vw 1vw 1vw;
-	}
+/*	.button-img {*/
+/*		width: auto;*/
+/*		height:  var(--small-dimension);*/
+/*		padding: 1vw 1vw 1vw 1vw;*/
+/*	}*/
 
-	.button-img-top{
-		width: auto;
-		height:  var(--small-dimension);
-		padding: 0vw 1vw 1vw 1vw;
-	}
-}
-
+/*	.button-img-top{*/
+/*		width: auto;*/
+/*		height:  var(--small-dimension);*/
+/*		padding: 0vw 1vw 1vw 1vw;*/
+/*	}*/
+/*}*/
 
 .button-img:hover{
 	opacity: 0.7;
 }
-
-
 
 .black-ball{
   background-color:black;
@@ -202,7 +200,7 @@
 	margin-top: 22px;
 }
 .space-bottom{
-	margin-bottom: 22px;
+	margin-bottom: 10px;
 }
 
 .left-space{
