--- a/css/fullwidth-div.css
+++ b/css/fullwidth-div.css
@@ -5,7 +5,7 @@
 }
 
 /*hide div on all screens with 700 and higher width*/
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1200px) {
     .expand-div-across-full-width {
         width: 100vw;
         height: 100vh;
